# MFGLib

./: .coveragerc  .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  example.py  pyproject.toml  test.py
.github/workflows/: build-documentation.yml  continuous-integration.yml  coverage.yml  draft-pdf.yml  lint-and-test.yml  on-merge-to-main.yml  on-pr.yml  on-pull-request.yml  release.yml
changelog.d/: +MFOMI.added.md  +save_and_load.added.md  +tuner_api.changed.md  40.fixed.md  45.added.md  47.changed.md
docs/source/: algorithms.rst  api.rst  citation.rst  citations.rst  conf.py  contributing.rst  environments.rst  examples.ipynb  index.rst  license.rst  plots.py  quickstart.rst  references.rst  refs.bib  tuning.rst
joss/: paper.bib  paper.md
mfglib/: __init__.py  mean_field.py  metrics.py  policy.py  q_fn.py  scoring.py  tuning.py  utils.py
mfglib/alg/: __init__.py  abc.py  fictitious_play.py  greedy_policy_given_mean_field.py  mf_omo.py  mf_omo_constraints.py  mf_omo_obj.py  mf_omo_params.py  mf_omo_policy_given_mean_field.py  mf_omo_residual_balancing.py  occupation_measure_inclusion.py  online_mirror_descent.py  prior_descent.py  q_fn.py  utils.py
mfglib/env/: __init__.py  environment.py
mfglib/env/examples/: beach_bar.py  building_evacuation.py  conservative_treasure_hunting.py  crowd_motion.py  equilibrium_price.py  left_right.py  linear_quadratic.py  random_linear.py  rock_paper_scissors.py  susceptible_infected.py
mfglib/mfc/: mesob.py
tests/: test_algorithms.py  test_environments.py  test_mean_field.py  test_metrics.py  test_policy.py  test_q_function.py  test_scoring.py  test_utils.py
