[tool.poetry]
name = "mfglib"
version = "0.1.1"
description = "A Library for Mean-Field Games"
authors = [
    "Xin Guo <xinguo@berkeley.edu>",
    "Anran Hu <anranhu0107@gmail.com>",
    "Matteo Santamaria <matteosantamaria@berkely.edu>",
    "Mahan Tajrobehkar <mahan_tajrobehkar@berkeley.edu>",  
    "Junzi Zhang <saslascroyale@gmail.com>",
]
readme = "README.md"
license = "MIT"
documentation = "https://mfglib.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2"
numpy = "^2"
optuna = "^3.0"
osqp = "^0"
scipy = "^1"
rich = "^14.0.0"
notebook = "^7.3.3"

[tool.poetry.group.dev.dependencies]
isort = "6.0.0"
black = "25.1.0"
mypy = "1.15.0"
ruff = "0.9.6"
pytest = "8.3.4"
coverage = "7.6.12"
towncrier = "24.8.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "7.4.7"
sphinx-autobuild = "2024.10.03"
sphinx-copybutton = "0.5.2"
sphinxcontrib-bibtex = "2.6.3"
matplotlib = "3.8.4"
jupyter_sphinx = "0.5.3"
furo = "2024.8.6"
nbsphinx = "^0.9.7"

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = ["D", "F401"]
ignore = ["D100", "D101", "D102", "D104", "D205"]
# We don't enforce docstrings in test functions
per-file-ignores = {"tests/test_*.py" = ["D103"]}

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["mfglib", "tests"]
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = ["osqp", "scipy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = "error"

[tool.towncrier]
package = "mfglib"
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/radar-research-lab/MFGLib/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/radar-research-lab/MFGLib/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
