[project]
name = "mfglib"
version = "0.1.1"
description = "A Library for Mean-Field Games."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Xin Guo", email = "xinguo@berkeley.edu" },
    { name = "Anran Hu", email = "anranhu0107@gmail.com" },
    { name = "Matteo Santamaria", email = "matteosantamaria@berkely.edu" },
    { name = "Mahan Tajrobehkar", email = "mahan_tajrobehkar@berkeley.edu" },
    { name = "Junzi Zhang", email = "saslascroyale@gmail.com" },
]
urls = { documentation = "https://mfglib.readthedocs.io/en/latest/" }
dependencies = [
    "torch~=2.0",
    "optuna~=3.0",
    "osqp~=0.0",
    "numpy~=1.0 ; python_version < '3.10'",
    "numpy~=2.0 ; python_version >= '3.10'",
    "scipy<1.13 ; python_version < '3.10'",
    "scipy~=1.13 ; python_version >= '3.10'",
    "rich~=14.0",
]

[tool.poetry.group.dev.dependencies]
isort = "~=6.0"
black = "~=25.0"
mypy = "~=1.0"
ruff = "~=0.9"
pytest = "~=8.0"
coverage = "~=7.0"
towncrier = "~=24.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
sphinx = "~=7.4"
sphinx-autobuild = "~=2024.10"
sphinx-copybutton = "~=0.5"
sphinxcontrib-bibtex = "~=2.6"
nbsphinx = "~=0.9"
ipykernel = "~=6.29"
furo = "~=2024.8"
matplotlib = "~=3.8"

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = ["D", "F401"]
ignore = ["D100", "D101", "D102", "D104", "D205"]
# We don't enforce docstrings in test functions
per-file-ignores = {"tests/test_*.py" = ["D103"]}

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["mfglib", "tests"]
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = ["osqp", "scipy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = "error"

[tool.towncrier]
package = "mfglib"
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}](https://github.com/radar-research-lab/MFGLib/tree/{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/radar-research-lab/MFGLib/issues/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
