[project]
name = "mfglib"
version = "0.2.0"
description = "A Library for Mean-Field Games."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<3.14"  # osqp doesn't provide wheels for >=3.14 yet
authors = [
    { name = "Xin Guo", email = "xinguo@berkeley.edu" },
    { name = "Anran Hu", email = "anranhu0107@gmail.com" },
    { name = "Matteo Santamaria", email = "matteosantamaria@berkely.edu" },
    { name = "Mahan Tajrobehkar", email = "mahan_tajrobehkar@berkeley.edu" },
    { name = "Junzi Zhang", email = "saslascroyale@gmail.com" },
]
urls = { documentation = "https://mfglib.readthedocs.io/en/latest/" }
dependencies = [
    "torch~=2.0",
    "optuna~=3.0",
    "osqp~=0.0",
    "numpy~=2.0",
    "scipy~=1.17 ",
    "rich~=14.0",
]

[tool.poetry.group.dev.dependencies]
isort = "~=7.0"
black = "~=26.0"
mypy = "~=1.0"
ruff = "~=0.9"
pytest = "~=9.0"
coverage = "~=7.0"
towncrier = "~=25.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
sphinx = "~=7.4"
sphinx-autobuild = "~=2024.10"
sphinx-copybutton = "~=0.5"
sphinxcontrib-bibtex = "~=2.6"
nbsphinx = "~=0.9"
ipykernel = "~=6.29"
ipywidgets = "~=8.1"
furo = "~=2024.8"
matplotlib = "~=3.8"

[tool.isort]
profile = "black"

[tool.ruff.lint]
select = ["D", "F401"]
ignore = ["D100", "D101", "D102", "D104", "D205"]
# We don't enforce docstrings in test functions
per-file-ignores = {"tests/test_*.py" = ["D103"]}

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["mfglib", "tests"]
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = ["osqp", "scipy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = "error"

[tool.towncrier]
package = "mfglib"
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [v{version}](https://github.com/radar-research-lab/MFGLib/tree/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/radar-research-lab/MFGLib/issues/{issue})"

[[tool.towncrier.type]]
name = "Security"

[[tool.towncrier.type]]
name = "Removed"

[[tool.towncrier.type]]
name = "Deprecated"

[[tool.towncrier.type]]
name = "Added"

[[tool.towncrier.type]]
name = "Changed"

[[tool.towncrier.type]]
name = "Fixed"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
